more changes around parts