@@ -1,4 +1,4 @@
-FROM adoptopenjdk/openjdk11-openj9:jdk-11.0.1.13-alpine-slim
+FROM openjdk:13-slim
 COPY build/libs/micronaut-test-*-all.jar app.jar
 EXPOSE 8081
-CMD java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar app.jar
+CMD java -XX:+UseContainerSupport -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar app.jar
